# GeometryCourse

./: .gitignore  .gitmodules  CMakeLists.txt  README.markdown  README.md
Profiler/: CMakeLists.txt
RectIntersector/: CMakeLists.txt
Tester/: CMakeLists.txt
cg_lib/: CMakeLists.txt
cg_lib/algo/: intersect.h  is_in_triangle.h  orientation.h  rect_segm_inter.h  segment_intersect.h  segment_triangle_inter.h  turn.h
cg_lib/primitives/: point.h  rect.h  rectangle.h  segment.h  triangle.h  vector.h
cg_lib/tests/algo/: CMakeLists.txt  test_in_triangle.cpp  test_intersect.cpp  test_rect_segm.cpp  test_tr_seg_int.cpp  test_turn.cpp
cg_lib/tests/struct/: test_range.cpp  test_skiplist.cpp
first/: main.cpp
primitives/: range.h  vector.h
struct/: skiplist.h
tests/: CMakeLists.txt
tests/algo/: CMakeLists.txt  test_intersect.cpp  test_turn.cpp
tests/struct/: CMakeLists.txt  test_range.cpp  test_skiplist.cpp
